noinst_PROGRAMS = memory tlb cache wb
memory_SOURCES = memory.c  
AM_CFLAGS = -c  
INCLUDES = -I$(top_srcdir)/armgo -I$(top_srcdir)/common -I$(top_srcdir)/boot -I$(top_srcdir)/cpu -I$(top_srcdir)/elf -I$(top_srcdir)/memory -I$(top_srcdir)/s3c2410 -I$(top_srcdir)/thread -I$(top_srcdir)/window


tlb_SOURCES = tlb.c  

cache_SOURCES = cache.c  

wb_SOURCES = wb.c
